// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tenant Quota Form Component should render the manage quotas form for a tenant no quotas defined 1`] = `
<div>
  <div
    class="tenant-quota-data-table"
  >
    <div
      class="miq-data-table"
    >
      <div
        class="cds--data-table-content"
      >
        <table
          class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
        >
          <thead>
            <tr>
              <th
                aria-sort="none"
                class="miq-data-table-header cds--table-sort__header"
                scope="col"
              >
                <div
                  class="cds--table-sort__description"
                  id="table-sort-1"
                >
                  Click to sort rows by Enforced header in ascending order
                </div>
                <button
                  aria-describedby="table-sort-1"
                  class="miq-data-table-header cds--table-sort"
                  type="button"
                >
                  <span
                    class="cds--table-sort__flex"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Enforced
                    </div>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon-unsorted"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                      />
                      <path
                        d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                      />
                    </svg>
                    <div
                      class="cds--table-header-label--decorator-inner"
                    />
                  </span>
                </button>
              </th>
              <th
                aria-sort="none"
                class="miq-data-table-header cds--table-sort__header"
                scope="col"
              >
                <div
                  class="cds--table-sort__description"
                  id="table-sort-2"
                >
                  Click to sort rows by Description header in ascending order
                </div>
                <button
                  aria-describedby="table-sort-2"
                  class="miq-data-table-header cds--table-sort"
                  type="button"
                >
                  <span
                    class="cds--table-sort__flex"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Description
                    </div>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon-unsorted"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                      />
                      <path
                        d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                      />
                    </svg>
                    <div
                      class="cds--table-header-label--decorator-inner"
                    />
                  </span>
                </button>
              </th>
              <th
                aria-sort="none"
                class="miq-data-table-header cds--table-sort__header"
                scope="col"
              >
                <div
                  class="cds--table-sort__description"
                  id="table-sort-3"
                >
                  Click to sort rows by Value header in ascending order
                </div>
                <button
                  aria-describedby="table-sort-3"
                  class="miq-data-table-header cds--table-sort"
                  type="button"
                >
                  <span
                    class="cds--table-sort__flex"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Value
                    </div>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon-unsorted"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                      />
                      <path
                        d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                      />
                    </svg>
                    <div
                      class="cds--table-header-label--decorator-inner"
                    />
                  </span>
                </button>
              </th>
              <th
                aria-sort="none"
                class="miq-data-table-header cds--table-sort__header"
                scope="col"
              >
                <div
                  class="cds--table-sort__description"
                  id="table-sort-4"
                >
                  Click to sort rows by Units header in ascending order
                </div>
                <button
                  aria-describedby="table-sort-4"
                  class="miq-data-table-header cds--table-sort"
                  type="button"
                >
                  <span
                    class="cds--table-sort__flex"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Units
                    </div>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon-unsorted"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                      />
                      <path
                        d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                      />
                    </svg>
                    <div
                      class="cds--table-header-label--decorator-inner"
                    />
                  </span>
                </button>
              </th>
            </tr>
          </thead>
          <tbody
            aria-live="polite"
          >
            <tr
              class=""
              tabindex="0"
              title=""
            >
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--toggle"
                  >
                    <button
                      aria-checked="false"
                      aria-labelledby="0:Enforced_label"
                      class="cds--toggle__button"
                      id="0:Enforced"
                      role="switch"
                      tabindex="0"
                      type="button"
                    />
                    <label
                      class="cds--toggle__label"
                      for="0:Enforced"
                      id="0:Enforced_label"
                    >
                      <span
                        class="cds--toggle__label-text"
                        dir="auto"
                      >
                        <span
                          class="cds--front-line"
                          title="Enforce a Value"
                        />
                      </span>
                      <div
                        class="cds--toggle__appearance"
                      >
                        <div
                          class="cds--toggle__switch"
                        />
                        <span
                          aria-hidden="true"
                          class="cds--toggle__text"
                          dir="auto"
                        >
                          Off
                        </span>
                      </div>
                    </label>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="Testing Testing 123"
                  >
                    Testing Testing 123
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--form-item quota-table-input cds--text-input-wrapper cds--text-input-wrapper--readonly"
                  >
                    <div
                      class="cds--text-input__label-wrapper"
                    >
                      <label
                        class="cds--label"
                        dir="auto"
                        for="0:Value"
                      >
                        <span
                          class="cds--front-line"
                          title=""
                        />
                      </label>
                    </div>
                    <div
                      class="cds--text-input__field-outer-wrapper"
                    >
                      <div
                        class="cds--text-input__field-wrapper"
                      >
                        <input
                          class="cds--text-input"
                          id="0:Value"
                          placeholder="Not Enforced"
                          readonly=""
                          tabindex="0"
                          title="Not Enforced"
                          type="number"
                          value=""
                        />
                        
                        <span
                          aria-atomic="true"
                          aria-live="assertive"
                          class="cds--text-input__counter-alert"
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="Count"
                  >
                    Count
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class=""
              tabindex="1"
              title=""
            >
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--toggle"
                  >
                    <button
                      aria-checked="false"
                      aria-labelledby="1:Enforced_label"
                      class="cds--toggle__button"
                      id="1:Enforced"
                      role="switch"
                      tabindex="0"
                      type="button"
                    />
                    <label
                      class="cds--toggle__label"
                      for="1:Enforced"
                      id="1:Enforced_label"
                    >
                      <span
                        class="cds--toggle__label-text"
                        dir="auto"
                      >
                        <span
                          class="cds--front-line"
                          title="Enforce a Value"
                        />
                      </span>
                      <div
                        class="cds--toggle__appearance"
                      >
                        <div
                          class="cds--toggle__switch"
                        />
                        <span
                          aria-hidden="true"
                          class="cds--toggle__text"
                          dir="auto"
                        >
                          Off
                        </span>
                      </div>
                    </label>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="This is a Test"
                  >
                    This is a Test
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--form-item quota-table-input cds--text-input-wrapper cds--text-input-wrapper--readonly"
                  >
                    <div
                      class="cds--text-input__label-wrapper"
                    >
                      <label
                        class="cds--label"
                        dir="auto"
                        for="1:Value"
                      >
                        <span
                          class="cds--front-line"
                          title=""
                        />
                      </label>
                    </div>
                    <div
                      class="cds--text-input__field-outer-wrapper"
                    >
                      <div
                        class="cds--text-input__field-wrapper"
                      >
                        <input
                          class="cds--text-input"
                          id="1:Value"
                          placeholder="Not Enforced"
                          readonly=""
                          tabindex="0"
                          title="Not Enforced"
                          type="number"
                          value=""
                        />
                        
                        <span
                          aria-atomic="true"
                          aria-live="assertive"
                          class="cds--text-input__counter-alert"
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="GB"
                  >
                    GB
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        tabindex="0"
        type="submit"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary cds--btn--disabled"
        disabled=""
        style="margin-left: 10px;"
        tabindex="0"
        type="reset"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        style="margin-left: 10px;"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`Tenant Quota Form Component should render the manage quotas form for a tenant with 1 quota already defined 1`] = `
<div>
  <div
    class="tenant-quota-data-table"
  >
    <div
      class="miq-data-table"
    >
      <div
        class="cds--data-table-content"
      >
        <table
          class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
        >
          <thead>
            <tr>
              <th
                aria-sort="none"
                class="miq-data-table-header cds--table-sort__header"
                scope="col"
              >
                <div
                  class="cds--table-sort__description"
                  id="table-sort-8"
                >
                  Click to sort rows by Enforced header in ascending order
                </div>
                <button
                  aria-describedby="table-sort-8"
                  class="miq-data-table-header cds--table-sort"
                  type="button"
                >
                  <span
                    class="cds--table-sort__flex"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Enforced
                    </div>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon-unsorted"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                      />
                      <path
                        d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                      />
                    </svg>
                    <div
                      class="cds--table-header-label--decorator-inner"
                    />
                  </span>
                </button>
              </th>
              <th
                aria-sort="none"
                class="miq-data-table-header cds--table-sort__header"
                scope="col"
              >
                <div
                  class="cds--table-sort__description"
                  id="table-sort-9"
                >
                  Click to sort rows by Description header in ascending order
                </div>
                <button
                  aria-describedby="table-sort-9"
                  class="miq-data-table-header cds--table-sort"
                  type="button"
                >
                  <span
                    class="cds--table-sort__flex"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Description
                    </div>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon-unsorted"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                      />
                      <path
                        d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                      />
                    </svg>
                    <div
                      class="cds--table-header-label--decorator-inner"
                    />
                  </span>
                </button>
              </th>
              <th
                aria-sort="none"
                class="miq-data-table-header cds--table-sort__header"
                scope="col"
              >
                <div
                  class="cds--table-sort__description"
                  id="table-sort-10"
                >
                  Click to sort rows by Value header in ascending order
                </div>
                <button
                  aria-describedby="table-sort-10"
                  class="miq-data-table-header cds--table-sort"
                  type="button"
                >
                  <span
                    class="cds--table-sort__flex"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Value
                    </div>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon-unsorted"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                      />
                      <path
                        d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                      />
                    </svg>
                    <div
                      class="cds--table-header-label--decorator-inner"
                    />
                  </span>
                </button>
              </th>
              <th
                aria-sort="none"
                class="miq-data-table-header cds--table-sort__header"
                scope="col"
              >
                <div
                  class="cds--table-sort__description"
                  id="table-sort-11"
                >
                  Click to sort rows by Units header in ascending order
                </div>
                <button
                  aria-describedby="table-sort-11"
                  class="miq-data-table-header cds--table-sort"
                  type="button"
                >
                  <span
                    class="cds--table-sort__flex"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Units
                    </div>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 4 6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      class="cds--table-sort__icon-unsorted"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M27.6 20.6 24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22z"
                      />
                      <path
                        d="M9 4 3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                      />
                    </svg>
                    <div
                      class="cds--table-header-label--decorator-inner"
                    />
                  </span>
                </button>
              </th>
            </tr>
          </thead>
          <tbody
            aria-live="polite"
          >
            <tr
              class=""
              tabindex="0"
              title=""
            >
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--toggle"
                  >
                    <button
                      aria-checked="true"
                      aria-labelledby="0:Enforced_label"
                      class="cds--toggle__button"
                      id="0:Enforced"
                      role="switch"
                      tabindex="0"
                      type="button"
                    />
                    <label
                      class="cds--toggle__label"
                      for="0:Enforced"
                      id="0:Enforced_label"
                    >
                      <span
                        class="cds--toggle__label-text"
                        dir="auto"
                      >
                        <span
                          class="cds--front-line"
                          title="Enforce a Value"
                        />
                      </span>
                      <div
                        class="cds--toggle__appearance"
                      >
                        <div
                          class="cds--toggle__switch cds--toggle__switch--checked"
                        />
                        <span
                          aria-hidden="true"
                          class="cds--toggle__text"
                          dir="auto"
                        >
                          On
                        </span>
                      </div>
                    </label>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="Testing Testing 123"
                  >
                    Testing Testing 123
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--form-item quota-table-input cds--text-input-wrapper"
                  >
                    <div
                      class="cds--text-input__label-wrapper"
                    >
                      <label
                        class="cds--label"
                        dir="auto"
                        for="0:Value"
                      >
                        <span
                          class="cds--front-line"
                          title=""
                        />
                      </label>
                    </div>
                    <div
                      class="cds--text-input__field-outer-wrapper"
                    >
                      <div
                        class="cds--text-input__field-wrapper"
                      >
                        <input
                          class="cds--text-input"
                          id="0:Value"
                          placeholder="Not Enforced"
                          tabindex="0"
                          title="Not Enforced"
                          type="number"
                          value="3"
                        />
                        
                        <span
                          aria-atomic="true"
                          aria-live="assertive"
                          class="cds--text-input__counter-alert"
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="Count"
                  >
                    Count
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class=""
              tabindex="1"
              title=""
            >
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--toggle"
                  >
                    <button
                      aria-checked="false"
                      aria-labelledby="1:Enforced_label"
                      class="cds--toggle__button"
                      id="1:Enforced"
                      role="switch"
                      tabindex="0"
                      type="button"
                    />
                    <label
                      class="cds--toggle__label"
                      for="1:Enforced"
                      id="1:Enforced_label"
                    >
                      <span
                        class="cds--toggle__label-text"
                        dir="auto"
                      >
                        <span
                          class="cds--front-line"
                          title="Enforce a Value"
                        />
                      </span>
                      <div
                        class="cds--toggle__appearance"
                      >
                        <div
                          class="cds--toggle__switch"
                        />
                        <span
                          aria-hidden="true"
                          class="cds--toggle__text"
                          dir="auto"
                        >
                          Off
                        </span>
                      </div>
                    </label>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="This is a Test"
                  >
                    This is a Test
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <div
                    class="cds--form-item quota-table-input cds--text-input-wrapper cds--text-input-wrapper--readonly"
                  >
                    <div
                      class="cds--text-input__label-wrapper"
                    >
                      <label
                        class="cds--label"
                        dir="auto"
                        for="1:Value"
                      >
                        <span
                          class="cds--front-line"
                          title=""
                        />
                      </label>
                    </div>
                    <div
                      class="cds--text-input__field-outer-wrapper"
                    >
                      <div
                        class="cds--text-input__field-wrapper"
                      >
                        <input
                          class="cds--text-input"
                          id="1:Value"
                          placeholder="Not Enforced"
                          readonly=""
                          tabindex="0"
                          title="Not Enforced"
                          type="number"
                          value=""
                        />
                        
                        <span
                          aria-atomic="true"
                          aria-live="assertive"
                          class="cds--text-input__counter-alert"
                          role="alert"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="cell"
                >
                  <span
                    class="cds--front-line"
                    title="GB"
                  >
                    GB
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        tabindex="0"
        type="submit"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary cds--btn--disabled"
        disabled=""
        style="margin-left: 10px;"
        tabindex="0"
        type="reset"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        style="margin-left: 10px;"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;
